Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <h3>
 <a id="project-proposal" class="anchor" href="#project-proposal" aria-hidden="true"><span class="octicon octicon-link"></span></a>Project Proposal</h3>
 
-<p>Find our project proposal <a href="/SoftdesProjectProposal.pdf">here</a>.</p>
+<p>Find our project proposal <a href="recipe_program/SoftdesProjectProposal.pdf">here</a>.</p>
 
 <hr>
       </section>
