Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 <h3>
 <a id="project-proposal" class="anchor" href="#project-proposal" aria-hidden="true"><span class="octicon octicon-link"></span></a>Project Proposal</h3>
 
-<p>Find our project proposal <a href="../images/SoftdesProjectProposal.pdf">here</a>.</p>
+<p>Find our project proposal <a href="/recipe_programs/images/SoftdesProjectProposal.pdf">here</a>.</p>
 
 <h3>
 <a id="design-review-1" class="anchor" href="#design-review-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Design Review 1</h3>
 
-<p>Find our preparation document <a href="../images/PreparationandFraming.pdf">here</a>.</p>
+<p>Find our preparation document <a href="/recipe_programs/images/PreparationandFraming.pdf">here</a>.</p>
 
 <hr>
 
