Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h3>
 <a id="stay-hungry" class="anchor" href="#stay-hungry" aria-hidden="true"><span class="octicon octicon-link"></span></a>Stay hungry.</h3>
 
-<p>We are developing a program that will find you a recipe based on the foods in your pantry, the amount of time you want to spend cooking, and your favorite ethnic cuisines.  We hope you will enjoy.</p>
+<p>We are developing a program that will find you a recipe based on the foods in your pantry and the amount of time you want to spend cooking.</p>
 
 <h3>
 <a id="designers" class="anchor" href="#designers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designers</h3>
