--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/custom.css" rel="stylesheet">
+    <link href="./stylesheets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./stylesheets/css/custom.css" rel="stylesheet">
   </head>
   <body>
     <div class="container"> 
