--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <h5 class = "text-muted">Class Structure</h5>
                 </center>
                 <h6 class = "text-muted">Each user objects has a pantry and a fridge as attributes. The pantry is stored between uses so the user can store commonly used ingredients, while the fridge is re-entered each time. The pantry and fridge as both extend the shelf class, which has a list of ingredients as an attribute.</h6><br>
-                <img src = "..\images\class.png">
+                <img src = ".\images\class.png">
                 <center>
                   <h5 class = "text-muted">Searching Algorithm</h5>
                 </center>
