--- a/index.html
+++ b/index.html
@@ -35,14 +35,33 @@
                 <center>
                   <h5 class = "text-muted">Searching Algorithm</h5>
                 </center>
-                <h6 class ="text-muted">This program searches through the user's available ingredients. A list of all potential recipes is built up calling the Yummly API (with a url call) for each ingredient. It creates a list of recipes that contain at least one available ingredient.This list is then filtered to remove items where the user is missing one or more ingredients. These recipes for each ingredient are memoized to reduce calls to the Yummly API, and decrease the program runtime.</h6><br><br>              
+                <h6 class ="text-muted">This program searches through the user's available ingredients. A list of all potential recipes is built up calling the Yummly API (with a url call) for each ingredient. It creates a list of recipes that contain at least one available ingredient.This list is then filtered to remove items where the user is missing one or more ingredients. These recipes for each ingredient are memoized to reduce calls to the Yummly API, and decrease the program runtime.</h6><br><br> 
+                <center>
+            <h4 class = "text-muted"><circles>Authors</circles></h4>
+                <h5 class = "text-muted">
+                 This program was created by Annabel Consilvio, Anisha Nakagawa, and Maggie Jakus.
+                </h5>
+              </center>
+                <br><br>   
+                <center>
+            <h4 class = "text-muted"><circles>Other Deliverables</circles></h4></center>
+                <h5 class = "text-muted">
+                 <ul>
+                  <li> <a href = "/images/SoftdesProjectProposal.pdf">Project Proposal</a>
+                  <li> <a href = "/images/PreparationandFraming.pdf">Prep & Framing</a>
+                  <li> <a href = "/images/DesignReviewReflection.pdf">Design Review Reflection</a>
+                  <li> <a href = "/images/SoftDesCodeReview.pdf">Code Review Prep</a>
+                  <li> <a href = "/images/CodeReviewReflection.pdf">Code Review Reflection</a>
+                 </ul>
+                </h5>
+                <br><br>            
              </div>
             <div class='col-md-4'>
             <center>
             <h4 class = "text-muted"><circles>Use the App</circles></h4>
                 <h5 class = "text-muted">
                   If you're interested in using the app, you can visit <a href = "http://rapid-recipes.herokuapp.com">http://rapid-recipes.herokuapp.com</a>
-                  If you are looking to make changes/edit the code on your own, please visit our <a href ="https://github.com/aconsilvio/recipe_program">github repository</a>.  Pymongo, Python, Flask, Heroku will all be needed in order to sucessfully run the program.    For more information, please consult the <a href = "../README.md">README</a>.
+                  If you are looking to make changes/edit the code on your own, please visit our <a href ="https://github.com/aconsilvio/recipe_program">github repository</a>.  Pymongo, Python, Flask, Heroku will all be needed in order to sucessfully run the program.    For more information, please consult the <a href = "/README.md">README</a>.
                 </h5>
                 <br><br>
                 <center>
