--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <h5 class = "text-muted">Class Structure</h5>
                 </center>
                 <h6 class = "text-muted">Each user objects has a pantry and a fridge as attributes. The pantry is stored between uses so the user can store commonly used ingredients, while the fridge is re-entered each time. The pantry and fridge as both extend the shelf class, which has a list of ingredients as an attribute.</h6><br>
-                <img src = "\images\class.png">
+                <img src = "\recipe_program\images\class.png">
                 <center>
                   <h5 class = "text-muted">Searching Algorithm</h5>
                 </center>
@@ -47,11 +47,11 @@
             <h4 class = "text-muted"><circles>Other Deliverables</circles></h4></center>
                 <h5 class = "text-muted">
                  <ul>
-                  <li> <a href = "/images/SoftdesProjectProposal.pdf">Project Proposal</a>
-                  <li> <a href = "/images/PreparationandFraming.pdf">Prep & Framing</a>
-                  <li> <a href = "/images/DesignReviewReflection.pdf">Design Review Reflection</a>
-                  <li> <a href = "/images/SoftDesCodeReview.pdf">Code Review Prep</a>
-                  <li> <a href = "/images/CodeReviewReflection.pdf">Code Review Reflection</a>
+                  <li> <a href = "/recipe_program/images/SoftdesProjectProposal.pdf">Project Proposal</a>
+                  <li> <a href = "/recipe_program/images/PreparationandFraming.pdf">Prep & Framing</a>
+                  <li> <a href = "/recipe_program/images/DesignReviewReflection.pdf">Design Review Reflection</a>
+                  <li> <a href = "/recipe_program/images/SoftDesCodeReview.pdf">Code Review Prep</a>
+                  <li> <a href = "/recipe_program/images/CodeReviewReflection.pdf">Code Review Reflection</a>
                  </ul>
                 </h5>
                 <br><br>            
