upload poster pdf

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                   <li> <a href = "/recipe_program/images/DesignReviewReflection.pdf">Design Review Reflection</a>
                   <li> <a href = "/recipe_program/images/SoftDesCodeReview.pdf">Code Review Prep</a>
                   <li> <a href = "/recipe_program/images/CodeReviewReflection.pdf">Code Review Reflection</a>
+                  <li> <a href = "/recipe_program/images/softdesposterfinal.pdf">Final Poster</a>
                  </ul>
                 </h5>
                 <br><br>            
@@ -61,7 +62,7 @@
             <h4 class = "text-muted"><circles>Use the App</circles></h4>
                 <h5 class = "text-muted">
                   If you're interested in using the app, you can visit <a href = "http://rapid-recipes.herokuapp.com">http://rapid-recipes.herokuapp.com</a>
-                  If you are looking to make changes/edit the code on your own, please visit our <a href ="https://github.com/aconsilvio/recipe_program">github repository</a>.  Pymongo, Python, Flask, Heroku will all be needed in order to sucessfully run the program.    For more information, please consult the <a href = "/README.md">README</a>.
+                  If you are looking to make changes/edit the code on your own, please visit our <a href ="https://github.com/aconsilvio/recipe_program">github repository</a>.  Pymongo, Python, Flask, Heroku will all be needed in order to sucessfully run the program.    For more information, please consult the <a href = "/recipe_program/README.md">README</a>.
                 </h5>
                 <br><br>
                 <center>
